# Bytes-Financial-Chatbot

./: .gitignore  README.md  pyproject.toml
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/frontend/: README.md  package-lock.json  package.json
frontend/frontend/src/: App.tsx  index.css
frontend/frontend/src/components/chat/: ChatStyles.ts
frontend/frontend/src/contexts/: AuthContext.tsx
frontend/frontend/src/pages/: ChatPage.tsx  LandingPage.tsx  LoginPage.tsx
frontend/frontend/src/types/: index.ts
frontend/src/components/auth/: AuthStyles.ts
frontend/src/components/chat/: ChatStyles.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: ChatPage.tsx  Chat_Styles.ts  SignupPage.tsx
src/bytes/: authenticator_service.py  backend.py  cli.py  schemas.py
src/bytes/agent_services/: agent.py  agent_schemas.py  bedrock_llm_wrapper.py
src/bytes/agents/: llm_schemas.py
src/bytes/database/: backend.py  db.py  models.py
src/bytes/database/crud/: ChatManager.py  ClientManager.py  ThreadManager.py  __init__.py
src/bytes/retriver/: PostgresChatMemoryStore.py  PostgresDocStore.py  PostgresMessageHistory.py  parser.py  retriver.py
src/bytes/risk_analyser/backend/: app.py  requirements.txt
src/bytes/risk_analyser/backend/risk_analysis/: analyzer.py  aws_bedrock_client.py  extractor.py  report_generator.py
src/bytes/risk_analyser/frontend/: index.html  package-lock.json  package.json  vite.config.js
src/bytes/risk_analyser/frontend/src/: App.jsx
src/bytes/risk_analyser/frontend/src/components/: RiskReportPDF.jsx  UploadForm.jsx
